#176 bugfix: убрать z-index у блока контактов

--- a/src/features/Contacts/contacts.module.scss
+++ b/src/features/Contacts/contacts.module.scss
@@ -2,7 +2,6 @@
 
 .contacts {
   position: fixed;
-  z-index: 999;
   right: 20px;
   bottom: 20px;
 }
